# Fredo

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE  Makefile  QUICKSTART.md  README.md  READY_FOR_GITHUB.md  TESTING.md  main.py  pyproject.toml  pytest.ini  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
docs/: INSTALL.md  QUICKSTART.md  README.md
fredo/: __init__.py  __main__.py  main.py
fredo/cli/: __init__.py  commands.py  interactive.py
fredo/core/: __init__.py  database.py  models.py  runner.py  search.py
fredo/integrations/: __init__.py  gist.py
fredo/utils/: __init__.py  config.py  editor.py
tests/: README.md  __init__.py  conftest.py  test_config.py  test_database.py  test_editor.py  test_gist.py  test_models.py  test_runner.py  test_search.py
